--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6054,11 +6054,11 @@ button, .global-overlay, .quantity .cart-plus-minus > .qtybutton, .price-filter 
 }
 
 .header-main_area-3 .header-middle_area .hm-form_area {
-  padding-top: 22px;
+  padding-top: 54px;
 }
 
 .header-main_area-3 .header-middle_area .header-right_area {
-  padding-top: 22px;
+  padding-top: 54px;
 }
 
 .header-main_area-3 .header-middle_area .header-right_area > ul > li.mobile-menu_wrap > a {
@@ -6877,7 +6877,7 @@ button, .global-overlay, .quantity .cart-plus-minus > .qtybutton, .price-filter 
     font-size: 14px;
   }
 }
-
+/* 
 .shop-product-wrap.grid.gridview-2 > [class*="col-"] {
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 50%;
@@ -6912,8 +6912,8 @@ button, .global-overlay, .quantity .cart-plus-minus > .qtybutton, .price-filter 
     height: 34px;
     line-height: 34px;
   }
-}
-
+} */
+/* 
 .shop-product-wrap.grid.gridview-3 > [class*="col-"] {
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 33.33333%;
@@ -6956,7 +6956,7 @@ button, .global-overlay, .quantity .cart-plus-minus > .qtybutton, .price-filter 
   -ms-flex: 0 0 25%;
   flex: 0 0 25%;
   max-width: 25%;
-}
+} */
 
 .shop-product-wrap.grid.gridview-5 > [class*="col-"] {
   -webkit-box-flex: 0;
@@ -6973,13 +6973,13 @@ button, .global-overlay, .quantity .cart-plus-minus > .qtybutton, .price-filter 
   line-height: 36px;
 }
 
-@media (max-width: 1500px) {
+/* @media (max-width: 1500px) { */
   .shop-product-wrap.grid.gridview-5 > [class*="col-"] .product-slide_item .inner-slide .single-product .product-img .add-actions > ul > li > a {
     width: 24px;
     height: 24px;
     line-height: 24px;
   }
-}
+/* } */
 
 .shop-product-wrap.listview > [class*="col-"] {
   -webkit-box-flex: 1;
