--- a/public/dashboard/css/style.css
+++ b/public/dashboard/css/style.css
@@ -18417,7 +18417,7 @@ input:focus {
 /* Sidebar */
 .sidebar {
   min-height: calc(100vh - 70px);
-  background: white  ;
+  background: linear-gradient(85deg, #ffe22a, #ffd603);
   font-family: "PTSans", sans-serif;
   font-weight: 400;
   padding: 0;
@@ -18890,7 +18890,7 @@ background-color: #c0bec89c;
 }
 
 .navbar.default-layout-navbar .navbar-brand-wrapper {
-  background: white ;
+  background: linear-gradient(85deg,#ffe22a, #ffd603); ;
   transition: width 0.25s ease, background 0.25s ease;
   -webkit-transition: width 0.25s ease, background 0.25s ease;
   -moz-transition: width 0.25s ease, background 0.25s ease;
@@ -18941,7 +18941,7 @@ background-color: #c0bec89c;
 }
 
 .navbar.default-layout-navbar .navbar-menu-wrapper {
-  background: white;
+  background: linear-gradient(95deg,#fbd900, #ffd600);
   transition: width 0.25s ease, background 0.25s ease;
   -webkit-transition: width 0.25s ease, background 0.25s ease;
   -moz-transition: width 0.25s ease, background 0.25s ease;
@@ -19460,7 +19460,7 @@ background-color: #c0bec89c;
   -webkit-align-items: stretch;
   align-items: stretch;
   padding: 0 2rem;
-  background: linear-gradient(85deg, #392c70, #6a005b);
+  background: linear-gradient(85deg, #DFA400, #DFA400);
 }
 
 .navbar.horizontal-layout-navbar .navbar-brand-wrapper .navbar-brand img {
@@ -20103,7 +20103,7 @@ code {
     display: flex;
     -webkit-align-items: center;
     align-items: center;
-    background: linear-gradient(85deg, #392c70, #6a005b);
+    background: linear-gradient(85deg, #DFA400, #DFA400);
     color: #ffffff;
     padding: 0.5rem 1.4rem;
     left: 70px;
@@ -20117,7 +20117,7 @@ code {
     box-shadow: 4px 0px 7px 0px rgba(182, 185, 189, 0.25);
   }
   .sidebar-dark.sidebar-icon-only .sidebar .nav .nav-item.hover-open .nav-link .menu-title {
-    background: linear-gradient(85deg, #392c70, #6a005b);
+    background: linear-gradient(85deg, #DFA400, #DFA400);
   }
   .rtl.sidebar-icon-only .sidebar .nav .nav-item.hover-open .nav-link .menu-title {
     left: auto;
@@ -20132,17 +20132,17 @@ code {
     display: none;
   }
   .sidebar-icon-only .sidebar .nav .nav-item.hover-open .nav-link:hover .menu-title {
-    background: linear-gradient(85deg, #392c70, #6a005b);
+    background: linear-gradient(85deg, #DFA400, #DFA400);
     color: #ffffff;
   }
   .sidebar-dark.sidebar-icon-only .sidebar .nav .nav-item.hover-open .nav-link:hover .menu-title {
-    background: linear-gradient(85deg, #392c70, #6a005b);
+    background: linear-gradient(85deg, #DFA400, #DFA400);
   }
   .sidebar-icon-only .sidebar .nav .nav-item.hover-open .collapse,
   .sidebar-icon-only .sidebar .nav .nav-item.hover-open .collapsing {
     display: block;
     padding: .5rem 0;
-    background: linear-gradient(85deg, #392c70, #6a005b);
+    background: linear-gradient(85deg, #DFA400, #DFA400);
     color: #ffffff;
     border-radius: 0 0 5px 0;
     position: absolute;
@@ -20151,7 +20151,7 @@ code {
     box-shadow: 4px 4px 7px 0px rgba(182, 185, 189, 0.25);
   }
   .sidebar-dark.sidebar-icon-only .sidebar .nav .nav-item.hover-open .collapse, .sidebar-dark.sidebar-icon-only .sidebar .nav .nav-item.hover-open .collapsing {
-    background: linear-gradient(85deg, #392c70, #6a005b);
+    background: linear-gradient(85deg, #DFA400, #DFA400);
   }
   .rtl.sidebar-icon-only .sidebar .nav .nav-item.hover-open .collapse, .rtl.sidebar-icon-only .sidebar .nav .nav-item.hover-open .collapsing {
     left: auto;
@@ -22189,7 +22189,7 @@ code {
 }
 
 .bg-inverse-secondary.breadcrumb-custom .breadcrumb-item {
-  background: white;
+  background: linear-gradient(85deg,#ffe22a, #ffd603);
 }
 
 .bg-inverse-secondary.breadcrumb-custom .breadcrumb-item a {
@@ -22378,7 +22378,7 @@ code {
 }
 
 .bg-inverse-light {
-  background: white;
+  background: linear-gradient(90deg,#ffe22a, #ffd603);;
   border-color: #E9E8EF;
 }
 
@@ -22557,8 +22557,8 @@ code {
 }
 
 .card.card-statistics {
-  background: linear-gradient(85deg, #392c70, #6a005b);
-  color: #ffffff;
+  background: linear-gradient(85deg, #ffe22a, #ffd603);
+  color: black;
 }
 
 .card.card-statistics .statistics-item {
